@@ -1,5 +1,5 @@
 module Rake
-  VERSION = '0.9.2.1'
+  VERSION = '0.9.2.2'
 
   module Version # :nodoc: all
     MAJOR, MINOR, BUILD = VERSION.split '.'
